--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Mahdi Abdurrahman <mdbdrrhm@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
