--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "SET NODE_ENV=DEVELOPMENT& nodemon server/server",
+    "server": "SET NODE_ENV=DEVELOPMENT& nodemon server/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server/server"
@@ -14,7 +14,6 @@
   "author": "Mahdi Abdurrahman <mdbdrrhm@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@sendgrid/mail": "^7.4.4",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -24,7 +23,8 @@
     "google-auth-library": "^7.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.6.1"
   },
   "devDependencies": {
     "concurrently": "^6.2.0"
